--- a/style.css
+++ b/style.css
@@ -128,3 +128,61 @@
     text-decoration: none;
     color: #FFF;
 }
+
+.companies , .skills {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+}
+
+.experiance {
+    display: flex;
+    flex-direction: column;
+}
+
+.projects {
+    padding-top: 20px;
+}
+
+.techskills {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+@media only screen and (max-width: 830px) {
+    .container {
+        flex-direction: column;
+        align-items: baseline;
+    }
+
+    .contacts {
+        margin-top: 0;
+    }
+
+    .contacts span {
+        padding: 0 5px 0 0;
+    }
+
+    .socialmedia {
+        margin-bottom: 10px;
+    }
+}
+
+@media only screen and (max-width: 350px){
+    .socialmedia{
+        display: none;
+    }
+    .mobile {
+        margin-bottom: 10px;
+    }
+    .bodycontainer {
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 890px) {
+    .bodycontainer {
+        flex-direction: column;
+    }
+}
